# hirepilot-ai

./: .gitignore  main.py  pyproject.toml  test.py
app/: main.py
app/agents/: resume_agent.py
app/api/routes/: job_description.py  query.py  resume.py
app/chains/: job_desc_parser.py  resume_parser.py
app/evaluation/: evaluation.py
app/llm/: llm_model.py
app/prompts/: job_description_parser.py  resume_agent.py  resume_parser.py
app/schemas/: job_description.py  resume.py
app/services/: chunk.py  pdf_services.py  vectorstore.py
chroma_db/: chroma.sqlite3
