[project]
name = "hirepilot-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.1",
    "crewai>=1.15.1",
    "dataset>=2.0.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.2",
    "langchain-google-vertexai>=3.2.4",
    "langchain-mistralai>=1.1.6",
    "langgraph>=1.2.7",
    "openai>=2.44.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.32",
    "ragas>=0.4.3",
    "uvicorn>=0.50.1",
]
